--- a/CefSharp.Test/packages.config
+++ b/CefSharp.Test/packages.config
@@ -3,7 +3,7 @@
   <package id="Castle.Core" version="4.4.0" targetFramework="net462" />
   <package id="cef.redist.x64" version="77.1.3" targetFramework="net462" />
   <package id="cef.redist.x86" version="77.1.3" targetFramework="net462" />
-  <package id="Microsoft.Net.Compilers" version="2.10.0" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="2.9.0" allowedVersions="[2.9.0]" targetFramework="net462" developmentDependency="true" />
   <package id="Moq" version="4.13.0" targetFramework="net462" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net462" />
